feat: Enhance server configuration and logging features
- Introduced a comprehensive server configuration system with categorized settings for basic configuration, server identity, advanced options, game rules, and logging.
- Added new properties to ServerConfig for improved server management, including LAN mode, VAC settings, performance options, and game rules.
- Implemented a logging system that allows users to copy logs to the clipboard and export them to files.
- Updated UI components to support the new configuration options and improve user experience with tooltips and validation.
- Enhanced the LogConsolePage to display logs in a text box with auto-scrolling functionality.

--- a/src/CSP2.Desktop/Resources/Locales/en.json
+++ b/src/CSP2.Desktop/Resources/Locales/en.json
@@ -302,7 +302,65 @@
     "ErrorMessage": "Error Message:",
     "ErrorDetails": "Details (can be copied)",
     "ErrorHint": "💡 Tip: You can select text and press Ctrl+C to copy",
-    "CopyAll": "Copy All"
+    "CopyAll": "Copy All",
+    "BasicConfig": "Basic Configuration",
+    "ServerIdentity": "Server Identity",
+    "AdvancedOptions": "Advanced Options",
+    "ServerIdentityDesc": "Configure server display name and authentication information in-game",
+    "ServerDisplayName": "Server Display Name",
+    "ServerDisplayNameTooltip": "Name displayed in server browser (leave empty to use server name)",
+    "SteamToken": "Steam Token",
+    "SteamTokenTooltip": "Required to display server in internet server list, obtain at https://steamcommunity.com/dev/managegameservers",
+    "SteamTokenHint": "💡 Public servers require Steam token, obtain at https://steamcommunity.com/dev/managegameservers",
+    "ServerPassword": "Server Password",
+    "ServerPasswordTooltip": "Password players must enter to join the server (leave empty for no password)",
+    "RconPassword": "RCON Password",
+    "RconPasswordTooltip": "Remote console password for managing server remotely via RCON",
+    "NetworkOptions": "Network Options",
+    "LanMode": "LAN Mode",
+    "LanModeTooltip": "Enable LAN mode, server will not be listed in internet server browser",
+    "InsecureMode": "Disable VAC",
+    "InsecureModeTooltip": "Disable Valve Anti-Cheat (VAC), allows modified clients to connect",
+    "PerformanceOptions": "Performance Options",
+    "ProcessPriority": "Process Priority",
+    "ProcessPriorityTooltip": "Set CPU priority for server process",
+    "PriorityLow": "Low",
+    "PriorityNormal": "Normal",
+    "PriorityHigh": "High",
+    "MaxFps": "Max FPS",
+    "MaxFpsTooltip": "Limit server maximum frame rate (leave empty for unlimited)",
+    "ThreadCount": "Thread Count",
+    "ThreadCountTooltip": "Number of worker threads server uses (leave empty for auto-detect)",
+    "DisableHltv": "Disable HLTV/GOTV",
+    "DisableHltvTooltip": "Disable HLTV (Half-Life TV) / GOTV spectator system",
+    "EnableConsole": "Enable Console",
+    "EnableConsoleTooltip": "Enable server console window",
+    "GameRules": "Game Rules",
+    "BotQuota": "Bot Quota",
+    "BotQuotaTooltip": "Number of AI bots in server (0 for no bots)",
+    "BotDifficulty": "Bot Difficulty",
+    "BotDifficultyTooltip": "Difficulty level of AI bots",
+    "BotEasy": "Easy",
+    "BotNormal": "Normal",
+    "BotHard": "Hard",
+    "BotExpert": "Expert",
+    "KickIdleTime": "Kick Idle Time (minutes)",
+    "KickIdleTimeTooltip": "Auto-kick players idle longer than this time (leave empty to disable)",
+    "EnableCheats": "Enable Cheat Commands",
+    "EnableCheatsTooltip": "Allow cheat console commands (like sv_cheats 1)",
+    "LoggingOptions": "Logging Options",
+    "EnableLogging": "Enable Logging",
+    "EnableLoggingTooltip": "Enable server log recording",
+    "ConsoleLogToFile": "Console Log to File",
+    "ConsoleLogToFileTooltip": "Save console output to log file",
+    "LogEcho": "Log Echo",
+    "LogEchoTooltip": "Display log messages in console",
+    "IPAddressTooltip": "IP address server binds to (0.0.0.0 to listen on all interfaces)",
+    "PortTooltip": "Port number server listens on",
+    "InitialMapTooltip": "Map to load when server starts",
+    "MaxPlayersTooltip": "Maximum number of players allowed on server",
+    "TickRateTooltip": "Server tick rate, higher is smoother but uses more performance",
+    "MapGroupTooltip": "Map group name for map rotation"
   }
 }
 
