--- a/src/CSP2.Desktop/Resources/Locales/zh-CN.json
+++ b/src/CSP2.Desktop/Resources/Locales/zh-CN.json
@@ -302,7 +302,65 @@
     "ErrorMessage": "错误信息：",
     "ErrorDetails": "详细信息（可复制）",
     "ErrorHint": "💡 提示：您可以选中文本并按 Ctrl+C 复制",
-    "CopyAll": "复制全部"
+    "CopyAll": "复制全部",
+    "BasicConfig": "基本配置",
+    "ServerIdentity": "服务器身份",
+    "AdvancedOptions": "高级选项",
+    "ServerIdentityDesc": "配置服务器在游戏中的显示名称和验证信息",
+    "ServerDisplayName": "服务器显示名称",
+    "ServerDisplayNameTooltip": "在服务器浏览器中显示的名称（留空则使用服务器名称）",
+    "SteamToken": "Steam 令牌",
+    "SteamTokenTooltip": "用于让服务器在互联网服务器列表中显示，在 https://steamcommunity.com/dev/managegameservers 获取",
+    "SteamTokenHint": "💡 公开服务器需要Steam令牌，在 https://steamcommunity.com/dev/managegameservers 获取",
+    "ServerPassword": "服务器密码",
+    "ServerPasswordTooltip": "玩家进入服务器需要输入的密码（留空表示无密码）",
+    "RconPassword": "RCON密码",
+    "RconPasswordTooltip": "远程管理控制台密码，用于通过RCON远程管理服务器",
+    "NetworkOptions": "网络选项",
+    "LanMode": "局域网模式",
+    "LanModeTooltip": "启用局域网模式，服务器将不会在互联网服务器列表中显示",
+    "InsecureMode": "禁用 VAC",
+    "InsecureModeTooltip": "禁用 Valve 反外挂系统 (VAC)，允许修改过的客户端连接",
+    "PerformanceOptions": "性能选项",
+    "ProcessPriority": "进程优先级",
+    "ProcessPriorityTooltip": "设置服务器进程的CPU优先级",
+    "PriorityLow": "低",
+    "PriorityNormal": "普通",
+    "PriorityHigh": "高",
+    "MaxFps": "最大FPS",
+    "MaxFpsTooltip": "限制服务器最大帧率（留空为不限制）",
+    "ThreadCount": "线程数",
+    "ThreadCountTooltip": "服务器使用的工作线程数（留空为自动检测）",
+    "DisableHltv": "禁用 HLTV/GOTV",
+    "DisableHltvTooltip": "禁用 HLTV (Half-Life TV) / GOTV 观战系统",
+    "EnableConsole": "启用控制台",
+    "EnableConsoleTooltip": "启用服务器控制台窗口",
+    "GameRules": "游戏规则",
+    "BotQuota": "BOT 数量",
+    "BotQuotaTooltip": "服务器中的AI机器人数量（0表示无BOT）",
+    "BotDifficulty": "BOT 难度",
+    "BotDifficultyTooltip": "AI机器人的难度等级",
+    "BotEasy": "简单",
+    "BotNormal": "普通",
+    "BotHard": "困难",
+    "BotExpert": "专家",
+    "KickIdleTime": "踢出闲置时间（分钟）",
+    "KickIdleTimeTooltip": "自动踢出闲置超过此时间的玩家（留空为不自动踢出）",
+    "EnableCheats": "启用作弊命令",
+    "EnableCheatsTooltip": "允许使用作弊控制台命令（如 sv_cheats 1）",
+    "LoggingOptions": "日志选项",
+    "EnableLogging": "启用日志",
+    "EnableLoggingTooltip": "启用服务器日志记录",
+    "ConsoleLogToFile": "控制台日志写入文件",
+    "ConsoleLogToFileTooltip": "将控制台输出保存到日志文件",
+    "LogEcho": "日志回显",
+    "LogEchoTooltip": "在控制台中显示日志消息",
+    "IPAddressTooltip": "服务器绑定的IP地址（0.0.0.0表示监听所有网卡）",
+    "PortTooltip": "服务器监听的端口号",
+    "InitialMapTooltip": "服务器启动时加载的地图",
+    "MaxPlayersTooltip": "服务器允许的最大玩家数量",
+    "TickRateTooltip": "服务器的Tick速率，越高越流畅但消耗更多性能",
+    "MapGroupTooltip": "地图组名称，用于地图轮换"
   }
 }
 
