feat: implement GitHub-based plugin repository system

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -356,9 +356,42 @@ public interface IPluginRepositoryService
 ```
 
 **数据来源**:
-- 第一阶段：本地JSON文件（模拟数据）
-- V2阶段：从GitHub仓库读取manifest.json
-- 缓存机制，避免频繁请求
+- ~~第一阶段：本地JSON文件（模拟数据）~~ ✅ 已完成
+- ✅ **当前实现**：从GitHub仓库读取manifest.json
+- ✅ 多级缓存机制，离线可用
+
+**GitHub插件源架构** (2025-10-27更新):
+
+CSP2现已实现完整的GitHub插件源系统，插件元数据托管在独立仓库：
+
+```
+csp2-plugin-repository (GitHub)
+    ↓ CDN加速 (jsDelivr)
+    ↓ HTTP GET
+CSP2.Core.Services.PluginRepositoryService
+    ↓ 缓存到本地
+data/plugins-cache.json
+    ↓ 读取
+PluginMarketViewModel (UI)
+```
+
+**多级降级策略**:
+1. **内存缓存**: 1小时内直接返回，无网络请求
+2. **远程拉取**: 从CDN拉取最新manifest.json
+3. **本地缓存**: 网络失败时使用本地缓存文件
+4. **内置默认**: 完全离线时使用内置插件列表
+
+**CDN端点**:
+```
+主要: https://cdn.jsdelivr.net/gh/your-org/csp2-plugin-repository@main/manifest.json
+备用: https://raw.githubusercontent.com/your-org/csp2-plugin-repository/main/manifest.json
+```
+
+**自动化更新**:
+- GitHub Actions每6小时自动拉取插件最新版本
+- 支持社区PR提交新插件
+- 自动验证JSON Schema和下载链接
+- 详见: [csp2-plugin-repository](https://github.com/your-org/csp2-plugin-repository)
 
 ---
 
