docs: Update plugin description field documentation
- Clarify Description field as English description
- Mark DescriptionZh as optional Chinese description
- Update plugin-repository submodule reference

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -475,8 +475,8 @@ public class PluginInfo
     public string Id { get; set; }              // 唯一标识（小写）
     public string Name { get; set; }            // 显示名称
     public string Author { get; set; }
-    public string Description { get; set; }
-    public string? DescriptionZh { get; set; }  // 中文描述
+    public string Description { get; set; }     // 英文描述
+    public string? DescriptionZh { get; set; }  // 中文描述（可选）
     
     public string Framework { get; set; }       // counterstrikesharp, metamod, etc.
     public string[] Dependencies { get; set; } = [];
