fix: correct Metamod framework file structure detection
- Changed to check actual Metamod files: bin/metamod.2.bgt.dll and bin/win64/server.dll
- Windows installation requires both files to exist
- Linux installation checks bin/linuxsteamrt64/metamod.so
- Updated installation verification logs to show correct files
- Updated technical documentation with accurate file structure

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -782,6 +782,9 @@ return Directory.Exists(cssPath) && (File.Exists(dllPath) || File.Exists(soPath)
    - 目标路径: `game/csgo/addons/metamod`
    - 处理路径前缀映射
    - 保存真实版本号到 `version.txt`
+   - **关键文件位置**:
+     - Windows: `bin/metamod.2.bgt.dll` 和 `bin/win64/server.dll`
+     - Linux: `bin/linuxsteamrt64/metamod.so`
 
 3. **配置集成**: 
    - 自动修改 `gameinfo.gi` 文件
@@ -790,6 +793,19 @@ return Directory.Exists(cssPath) && (File.Exists(dllPath) || File.Exists(soPath)
 4. **依赖关系**: 
    - CounterStrikeSharp 依赖 Metamod
    - 安装 CSS 前会自动检查并安装 Metamod
+
+**安装状态检查** (2025-10-28更新):
+
+Metamod 需要检查多个关键文件：
+- Windows 平台：需要同时存在 `bin/metamod.2.bgt.dll` 和 `bin/win64/server.dll`
+- Linux 平台：需要存在 `bin/linuxsteamrt64/metamod.so`
+
+```csharp
+// Windows 安装检查
+var metamodBgtDll = Path.Combine(metaModPath, "bin", "metamod.2.bgt.dll");
+var serverDll = Path.Combine(metaModPath, "bin", "win64", "server.dll");
+var windowsInstalled = File.Exists(metamodBgtDll) && File.Exists(serverDll);
+```
 
 **安装流程进度**:
 
