feat: improve CSS installation with Metamod file detection
- Detect and track files that CSS adds to metamod directory
- Only backup counterstrikesharp directory, not metamod
- Log detailed info when adding Metamod plugin files
- Prevent unnecessary backup of existing Metamod installation
- Show summary: 'Added N files to Metamod directory'

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -745,6 +745,11 @@ public class FrameworkInfo
    - **关键文件位置**: 
      - Windows: `bin/win64/counterstrikesharp.dll`
      - Linux: `bin/linuxsteamrt64/counterstrikesharp.so`
+   - **Metamod 插件处理**:
+     - CSS 作为 Metamod 插件运行，会向 `addons/metamod/` 添加文件
+     - 安装时只备份 `counterstrikesharp` 目录，不备份 `metamod` 目录
+     - 自动检测并记录添加到 Metamod 的文件
+     - 显示日志：`✓ 已添加 N 个文件到 Metamod 目录`
 
 4. **版本记录**: 保存版本信息到 `version.txt`
 
