docs: add framework installation progress dialog documentation
- Documented new FrameworkInstallProgressDialog features
- Added visual progress indicators explanation
- Documented dependency installation handling
- Added code examples and user experience improvements

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -487,6 +487,68 @@ PluginMarketViewModel (UI)
   - ✅ 安装进度实时更新
   - ✅ 自动切换服务器时刷新状态
 
+**安装进度对话框** (2025-10-28新增):
+
+CSP2 现在提供了友好的可视化安装进度对话框 (`FrameworkInstallProgressDialog`)，大幅提升用户体验：
+
+✨ **核心功能**:
+- **实时进度显示**: 
+  - 大号百分比数字（0-100%）
+  - 动画进度条（平滑过渡效果）
+  - 当前步骤文本说明
+  - 详细操作消息
+
+- **阶段可视化**: 根据安装阶段自动切换图标
+  - ⏳ 准备中（0-10%）
+  - ⬇️ 下载中（10-60%）
+  - 📦  解压中（60-95%）
+  - ✅ 安装完成（100%）
+  - ❌ 安装失败
+
+- **依赖处理**: 智能显示依赖安装
+  - 🔗 图标标识依赖安装阶段
+  - 标题变更：`正在安装依赖: Metamod:Source`
+  - 进度映射：Metamod (0-50%) + CSS (50-100%)
+  - 清晰的阶段提示文本
+
+- **状态反馈**:
+  - 成功：显示✅图标，绿色主题，1.5秒后自动关闭
+  - 失败：显示❌图标，错误消息，手动关闭
+  - 取消：确认对话框，防止误操作
+
+**实现细节**:
+
+```csharp
+// 进度更新（带动画）
+public void UpdateProgress(InstallProgress progress)
+{
+    PercentageText.Text = $"{progress.Percentage:F0}%";
+    // 动画更新进度条宽度
+    var animation = new DoubleAnimation { 
+        To = targetWidth, 
+        Duration = 200ms 
+    };
+}
+
+// 依赖安装显示
+public void ShowInstallingDependency(string dependencyName)
+{
+    TitleText.Text = $"正在安装依赖: {dependencyName}";
+    IconText.Text = "🔗";
+}
+
+// 成功/失败状态
+public void ShowSuccess(string message);
+public void ShowError(string errorMessage);
+```
+
+**用户体验改进**:
+1. **非阻塞UI**: 对话框为非模态，用户可以看到进度但不能关闭主窗口
+2. **清晰的错误提示**: 失败时显示详细错误信息，方便诊断
+3. **取消确认**: 防止用户误点取消导致安装中断
+4. **自动关闭**: 成功后自动关闭，无需手动点击
+5. **友好的警告**: 选择服务器、找不到安装程序等都有MessageBox提示
+
 🔜 **计划支持的字段**:
 - `tags` - 标签列表（用于筛选和展示特性）
 - `links` - 相关链接（主页、文档、问题反馈）
