ui: add server selector to framework management area
- Added server selector display in plugin market framework section
- Shows current selected server name and installation path
- Path supports text ellipsis with tooltip for full path viewing
- Fallback text for when no server is selected
- Updated documentation with server selector feature details

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -549,6 +549,61 @@ public void ShowError(string errorMessage);
 4. **自动关闭**: 成功后自动关闭，无需手动点击
 5. **友好的警告**: 选择服务器、找不到安装程序等都有MessageBox提示
 
+---
+
+**服务器选择器** (2025-10-28新增):
+
+在框架管理区域的顶部新增了服务器选择器，让用户清楚地知道框架将安装到哪个服务器：
+
+📂 **功能特性**:
+- **服务器名称显示**: 以高亮颜色显示当前选中的服务器名称
+- **安装路径显示**: 显示完整的服务器安装路径
+  - 小字体、低对比度，不占据过多视觉空间
+  - 支持文本截断（`TextTrimming="CharacterEllipsis"`）
+  - 鼠标悬停显示完整路径（ToolTip）
+- **未选择提示**: 当没有选择服务器时显示友好提示
+  - "未选择服务器"（名称位置）
+  - "请在左侧选择一个服务器"（路径位置）
+
+**UI布局**:
+```xml
+<!-- 服务器选择器卡片 -->
+<Border Background="{BackgroundBrush}"
+        BorderBrush="{BorderBrush}"
+        CornerRadius="8"
+        Padding="12">
+    <Grid>
+        <!-- 左侧：图标 + 标签 -->
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="📂" FontSize="16"/>
+            <TextBlock Text="安装到服务器: " FontWeight="SemiBold"/>
+        </StackPanel>
+        
+        <!-- 右侧：服务器信息 -->
+        <StackPanel>
+            <TextBlock Text="{Binding SelectedServer.Name}"
+                       Foreground="{AccentBrush}"
+                       FontWeight="SemiBold"/>
+            <TextBlock Text="{Binding SelectedServer.InstallPath}"
+                       Foreground="{TextTertiaryBrush}"
+                       TextTrimming="CharacterEllipsis"
+                       ToolTip="{Binding SelectedServer.InstallPath}"/>
+        </StackPanel>
+    </Grid>
+</Border>
+```
+
+**数据绑定**:
+- 绑定到 `PluginMarketViewModel.SelectedServer`
+- 使用 `FallbackValue` 处理未选择状态
+- 路径支持 ToolTip 显示完整信息
+
+**用户体验**:
+1. **路径可见性**: 用户安装前能确认目标服务器
+2. **防止误操作**: 减少安装到错误服务器的可能
+3. **信息透明**: 完整路径通过悬停查看
+4. **视觉层次**: 使用不同字体大小和颜色区分重要性
+
 🔜 **计划支持的字段**:
 - `tags` - 标签列表（用于筛选和展示特性）
 - `links` - 相关链接（主页、文档、问题反馈）
