feat: add FileMapping support for complex plugin installation

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -438,6 +438,81 @@ PluginMarketViewModel (UI)
 - `downloads.total` - 总下载次数
 - `rating.average` / `rating.count` - 评分和评分人数
 
+**插件安装配置格式** (2025-10-27更新):
+
+CSP2 支持灵活的插件安装配置，可以处理复杂的文件布局和依赖关系。
+
+✅ **简单安装模式**:
+
+适用于结构简单的插件，只需指定目标路径和文件模式：
+
+```json
+{
+  "installation": {
+    "type": "extract",
+    "targetPath": "game/csgo/addons/counterstrikesharp/plugins",
+    "files": ["MyPlugin/*"],
+    "requiresRestart": true
+  }
+}
+```
+
+✅ **高级文件映射模式**:
+
+适用于文件需要放置在不同目录的复杂插件（如 WeaponPaints）：
+
+```json
+{
+  "installation": {
+    "type": "extract",
+    "mappings": [
+      {
+        "source": "addons/counterstrikesharp/plugins/WeaponPaints/*",
+        "target": "game/csgo/addons/counterstrikesharp/plugins/WeaponPaints",
+        "recursive": true
+      },
+      {
+        "source": "addons/counterstrikesharp/gamedata/*",
+        "target": "game/csgo/addons/counterstrikesharp/gamedata",
+        "recursive": true
+      },
+      {
+        "source": "addons/counterstrikesharp/configs/plugins/WeaponPaints/*",
+        "target": "game/csgo/addons/counterstrikesharp/configs/plugins/WeaponPaints",
+        "recursive": true
+      }
+    ],
+    "requiresRestart": true
+  }
+}
+```
+
+**文件映射字段说明**:
+- `source`: ZIP 包内的源路径模式，支持通配符：
+  - `*` - 匹配单层任意文件/文件夹
+  - `**` - 匹配任意层级目录
+  - 例如：`gamedata/*`, `MyPlugin/**/*.dll`, `configs/**/config.json`
+- `target`: 目标路径（相对于服务器根目录）
+- `recursive`: 是否递归复制子目录（默认 true）
+- `exclude`: 排除的文件模式（可选）
+
+✅ **依赖管理**:
+
+插件可以声明前置依赖，安装时会自动检查：
+
+```json
+{
+  "dependencies": [
+    "cs2-tags",
+    "cs2-customvotes",
+    "sharptimerz",
+    "databaseconnection"
+  ]
+}
+```
+
+系统会在安装前验证所有依赖是否已安装，缺少依赖时会提示用户先安装依赖插件。
+
 **框架管理功能** (2025-10-27更新):
 
 插件商店页面现已集成框架管理功能，支持一键安装CSS和Metamod：
@@ -603,6 +678,123 @@ public void ShowError(string errorMessage);
 2. **防止误操作**: 减少安装到错误服务器的可能
 3. **信息透明**: 完整路径通过悬停查看
 4. **视觉层次**: 使用不同字体大小和颜色区分重要性
+
+---
+
+**框架下载与下载管理器集成** (2025-10-28新增):
+
+框架安装过程现已完全集成到统一的下载管理系统中，用户可以在"下载管理"页面查看框架下载进度并保留历史记录。
+
+✨ **核心功能**:
+- **自动任务创建**: 框架安装开始时自动创建下载任务
+- **实时进度同步**: 下载进度同时显示在进度对话框和下载管理页面
+- **历史记录保留**: 完成的下载任务保留在下载管理器中，方便查看
+- **统一管理**: 框架、插件、SteamCMD 等所有下载统一管理
+
+**实现架构**:
+
+```
+┌─────────────────────┐
+│ PluginMarketViewModel│
+│   (触发安装)         │
+└──────────┬──────────┘
+           │
+           v
+┌─────────────────────┐
+│  FrameworkProvider  │
+│  - Metamod          │
+│  - CounterStrikeSharp│
+└──────────┬──────────┘
+           │ 注入
+           v
+┌─────────────────────┐       ┌──────────────────┐
+│   DownloadManager   │<──────│  DownloadTask    │
+│  - 创建任务         │       │  - Framework类型  │
+│  - 更新进度         │       │  - 进度/大小/状态 │
+│  - 触发事件         │       │  - 日志消息       │
+└──────────┬──────────┘       └──────────────────┘
+           │
+           v
+┌─────────────────────┐
+│DownloadManagerView  │
+│  (显示所有下载)     │
+└─────────────────────┘
+```
+
+**技术实现**:
+
+1. **依赖注入** (`App.xaml.cs`):
+```csharp
+services.AddSingleton(sp =>
+{
+    var downloadManager = sp.GetRequiredService<IDownloadManager>();
+    var metamodProvider = new MetamodFrameworkProvider(downloadManager);
+    var cssProvider = new CSSFrameworkProvider(downloadManager);
+    // ...
+});
+```
+
+2. **Provider 构造函数**:
+```csharp
+public class MetamodFrameworkProvider : IFrameworkProvider
+{
+    private readonly IDownloadManager? _downloadManager;
+    
+    public MetamodFrameworkProvider(IDownloadManager? downloadManager = null)
+    {
+        _downloadManager = downloadManager;
+    }
+}
+```
+
+3. **安装过程集成**:
+```csharp
+public async Task<InstallResult> InstallAsync(...)
+{
+    // 创建下载任务
+    if (_downloadManager != null)
+    {
+        var downloadTask = new DownloadTask
+        {
+            Name = "Metamod:Source",
+            TaskType = DownloadTaskType.Framework,
+            Status = DownloadTaskStatus.Pending
+        };
+        _downloadManager.AddTask(downloadTask);
+        _downloadManager.UpdateTaskStatus(taskId, DownloadTaskStatus.Downloading);
+    }
+    
+    // 下载过程中更新进度
+    _downloadManager?.UpdateTaskProgress(taskId, progress, message);
+    
+    // 完成或失败时更新状态
+    _downloadManager?.UpdateTaskStatus(taskId, 
+        success ? DownloadTaskStatus.Completed : DownloadTaskStatus.Failed);
+}
+```
+
+4. **进度同步**:
+   - 下载阶段：实时更新字节数和百分比
+   - 解压阶段：报告解压进度（50-95%）
+   - 完成阶段：标记为 100%，状态改为 Completed
+
+**下载任务字段**:
+- `Name`: 框架名称（Metamod:Source / CounterStrikeSharp）
+- `Description`: 框架描述
+- `TaskType`: Framework（框架类型）
+- `Progress`: 0-100% 进度
+- `TotalSize`: 文件总大小（字节）
+- `DownloadedSize`: 已下载大小（字节）
+- `Status`: Pending/Downloading/Completed/Failed
+- `LogMessages`: 详细日志列表
+
+**用户体验提升**:
+1. **双重进度显示**: 
+   - 前台：进度对话框实时显示
+   - 后台：下载管理页面可查看
+2. **历史追溯**: 可查看过去安装的框架和版本
+3. **状态清晰**: 成功/失败/取消状态一目了然
+4. **日志完整**: 每个步骤都有详细日志记录
 
 🔜 **计划支持的字段**:
 - `tags` - 标签列表（用于筛选和展示特性）
