docs: update documentation for simplified server configuration
- Update technical design doc to reflect simplified config system
- Add explanation of single input box approach
- Document default launch arguments
- Add advantages and working principles section
- Update README features to include simple configuration
- Update both English and Chinese documentation

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -1695,85 +1695,65 @@ string msg = string.Format(Strings.Download_Completed, taskName);
 
 ## 12. 服务器启动参数配置系统
 
-**更新时间**: 2025-10-26
+**更新时间**: 2025-10-29
 
-CSP2 提供了完善的服务器启动参数配置系统，通过友好的UI界面让用户轻松配置各种服务器启动选项。
+CSP2 提供了简洁的服务器启动参数配置系统，用户可以直接输入完整的启动参数。
 
-### 12.1 配置分类
+### 12.1 配置方式
 
-服务器配置按功能分为三大类，使用Tab页签组织：
+**简化配置界面**: 
+- **单一输入框**: 用户直接输入完整的启动参数
+- **默认参数**: 系统提供默认参数作为示例
+- **参数说明**: 界面内置常用参数的说明文档
+- **灵活性**: 用户可以完全自定义所有启动参数
 
-#### **Tab 1: 基本配置**
-- **网络配置**: IP地址、端口
-- **游戏配置**: 初始地图、最大玩家数、Tick Rate、地图组
+### 12.2 默认启动参数
 
-#### **Tab 2: 服务器身份**
-- **显示信息**: 服务器在浏览器中的显示名称
-- **认证信息**: Steam Token（公开服务器必需）
-- **安全信息**: 服务器密码、RCON密码
+系统提供的默认启动参数：
 
-#### **Tab 3: 高级选项**
-- **网络选项**: 局域网模式、禁用VAC
-- **性能选项**: 进程优先级、最大FPS、线程数、禁用HLTV、启用控制台
-- **游戏规则**: BOT数量、BOT难度、踢出闲置时间、启用作弊
-- **日志选项**: 启用日志、控制台日志写入文件、日志回显
+```
+-dedicated          # 专用服务器模式
+-console            # 启用控制台
+-ip 0.0.0.0        # 监听所有网卡
+-port 27015        # 服务器端口
+-maxplayers 10     # 最大玩家数
+-tickrate 128      # 服务器刷新率
++game_type 0       # 游戏类型（经典）
++game_mode 1       # 游戏模式（竞技）
++mapgroup mg_active # 地图组
++map de_dust2      # 启动地图
+```
 
-### 12.2 启动参数说明
+### 12.3 常用参数说明
 
-| 参数类别 | 参数名称 | 说明 | 默认值 |
-|---------|---------|------|--------|
-| **基础配置** |
-| | IP地址 | 服务器绑定的IP地址 | 0.0.0.0 (所有网卡) |
-| | 端口 | 服务器监听端口 | 27015 |
-| | 初始地图 | 服务器启动时加载的地图 | de_dust2 |
-| | 地图组 | 地图轮换组 | mg_active |
-| | 最大玩家数 | 服务器允许的最大玩家数 | 10 |
-| | Tick Rate | 服务器刷新率(64/128) | 128 |
-| **服务器身份** |
-| | 服务器名称 | 在浏览器中显示的名称 | (可选) |
-| | Steam Token | 公开服务器令牌 | (可选) |
-| | 服务器密码 | 进入服务器的密码 | (可选) |
-| | RCON密码 | 远程管理密码 | (可选) |
-| **网络设置** |
-| | 局域网模式 | 是否为局域网服务器 | 否 |
-| | 禁用VAC | 禁用反外挂系统 | 否 |
-| **性能优化** |
-| | 进程优先级 | CPU优先级(低/普通/高) | 普通 |
-| | 最大FPS | 服务器最大帧率 | (无限制) |
-| | 线程数 | 工作线程数 | (自动) |
-| | 禁用HLTV | 禁用观战系统 | 否 |
-| | 启用控制台 | 显示控制台窗口 | 是 |
-| **游戏规则** |
-| | BOT数量 | AI机器人数量 | 0 |
-| | BOT难度 | 机器人难度(0-3) | 2 (困难) |
-| | 踢出闲置时间 | 自动踢出闲置玩家的时间 | (不踢出) |
-| | 启用作弊 | 允许作弊命令 | 否 |
-| **日志设置** |
-| | 启用日志 | 记录服务器日志 | 是 |
-| | 控制台日志写入 | 控制台输出保存到文件 | 否 |
-| | 日志回显 | 在控制台显示日志 | 是 |
+界面内置了以下参数的说明：
 
-### 12.3 用户体验改进
+| 参数 | 说明 |
+|------|------|
+| `-dedicated` | 专用服务器模式 |
+| `-console` | 启用控制台 |
+| `-ip 0.0.0.0` | 监听所有网卡 |
+| `-port 27015` | 服务器端口 |
+| `-maxplayers 10` | 最大玩家数 |
+| `-tickrate 128` | 服务器刷新率 |
+| `+map de_dust2` | 启动地图 |
+| `+game_mode 1` | 游戏模式 (0=休闲 1=竞技) |
 
-1. **分类展示**: 使用Tab页签将配置项按类别组织，避免界面杂乱
-2. **工具提示**: 每个配置项都有详细的Tooltip说明
-3. **默认值**: 所有配置项都有合理的默认值，新手用户可直接使用
-4. **输入验证**: 对关键参数进行实时验证，防止错误配置
-5. **可选参数**: 高级选项标记为可选，留空时不会生成对应的启动参数
+更多配置建议使用 `game/csgo/cfg/autoexec.cfg` 文件。
 
-### 12.4 国际化支持
+### 12.4 工作原理
 
-所有配置项的标签、提示信息都完全支持国际化：
-- **中文**: 完整的中文界面和说明
-- **英文**: 完整的英文界面和说明
-- 用户可在设置中一键切换语言
+1. **保存参数**: 用户输入的完整参数保存在 `ServerConfig.UserEditedFullArgs` 中
+2. **智能解析**: 系统会尝试从参数中解析端口、地图等基本信息用于列表显示
+3. **默认配置**: 如果用户留空输入框，系统将使用默认配置
+4. **灵活性**: 用户可以完全自定义所有启动参数，不受UI限制
 
-### 12.5 扩展性
+### 12.5 优势
 
-配置系统设计考虑了未来的扩展需求：
-- **CustomArgs**: 支持添加任意自定义启动参数
-- **Provider机制**: 不同平台可以扩展特定的启动参数
-- **配置模板**: 未来可支持保存和加载配置模板
+1. **简洁性**: 界面简单，无需在多个选项中切换
+2. **灵活性**: 用户可以使用任何CS2支持的启动参数
+3. **专业性**: 适合熟悉CS2服务器配置的用户
+4. **透明性**: 参数完全可见，不会有隐藏的配置
 
 ---
 
