--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -3,7 +3,7 @@
 > Counter-Strike 2 Server Panel - CS2服务器管理面板
 
 **版本**: v0.1.0  
-**更新时间**: 2025-10-26  
+**更新时间**: 2025-10-29  
 **作者**: CSP2 开发团队
 
 ---
@@ -1243,6 +1243,21 @@ public class LinuxPlatformProvider : IPlatformProvider
 - 使用`IProgress<T>`报告进度
 - 日志显示使用虚拟化列表（超过1000行时）
 - 使用`Dispatcher`/`SynchronizationContext`更新UI
+
+**现代化UI组件** (2025-10-29更新):
+
+1. **自定义滚动条样式** (`ModernScrollBar` / `ModernScrollViewer`)
+   - 6px 超细滚动条，视觉更加简洁
+   - 默认透明度 20%，悬停时提升至 70%
+   - 拖拽时显示主题色 (Primary) 并提升至 85% 透明度
+   - 平滑的淡入淡出动画效果
+   - 圆角设计 (CornerRadius: 4px)
+   - 无按钮设计，符合现代UI趋势
+   
+2. **插件商店页面优化**
+   - 整页统一滚动，避免嵌套滚动条
+   - 框架管理区域、过滤栏、插件列表统一滚动体验
+   - 流畅的浏览体验，不再固定顶部区域
 
 ### 8.4 UI线程管理（重要）
 
