chore: update plugin-repository submodule and enhance server equality comparison
- Updated plugin-repository submodule to commit 5c414f1a484bede3e999605f709d3ef12fdcf2dc
- Added equality comparison methods in Server class for better object handling
- Improved README.zh-CN.md for clarity and conciseness
- Enhanced ComboBox bindings in UI for better data synchronization

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -829,6 +829,20 @@ public class Server
     public ServerConfig Config { get; set; }    // 配置信息
     public DateTime CreatedAt { get; set; }
     public DateTime? LastStartedAt { get; set; }
+    
+    // 重写相等性比较方法，基于 Id 进行比较
+    // 这对于 WPF 绑定中的 ComboBox 选择非常重要
+    public override bool Equals(object? obj)
+    {
+        if (obj is Server other)
+            return Id == other.Id;
+        return false;
+    }
+    
+    public override int GetHashCode()
+    {
+        return Id?.GetHashCode() ?? 0;
+    }
 }
 
 public enum ServerStatus
