docs: document automatic plugin dependency installation
- Add detailed explanation of dependency auto-install mechanism
- Include example workflow and dependency chains
- Document circular dependency detection
- Add error handling strategies
- Describe user experience improvements

--- a/docs/01-技术设计文档.md
+++ b/docs/01-技术设计文档.md
@@ -265,9 +265,122 @@ public interface IPluginManager
 
 **实现要点**:
 - 委托给对应的`IFrameworkProvider`执行
-- 处理依赖关系（如CSS依赖Metamod）
+- **自动依赖解析和安装**（2025-10-29 新增）
 - 支持进度报告
 - 错误处理和回滚
+
+**依赖自动安装机制** (2025-10-29更新):
+
+插件安装时会自动检测并安装缺失的依赖项，无需用户手动干预：
+
+1. **依赖检测**: 
+   - 读取插件的 `dependencies` 字段
+   - 检查每个依赖是否已安装
+   - 识别所有缺失的依赖项
+
+2. **自动查找依赖**:
+   - 从插件仓库查找缺失的依赖插件
+   - 如果找不到依赖，返回友好的错误提示
+   - 如果找到依赖，自动开始安装流程
+
+3. **递归安装**:
+   - 自动安装依赖的依赖（多层依赖）
+   - 使用安装链（installationChain）跟踪依赖路径
+   - 检测并防止循环依赖
+
+4. **进度反馈**:
+   - 显示当前正在安装的依赖名称
+   - 更新安装进度
+   - 记录所有自动安装的依赖
+
+5. **结果报告**:
+   - 在安装成功对话框显示已安装的依赖列表
+   - 记录依赖安装详情到 `InstallResult.InstalledDependencies`
+   - 日志记录完整的依赖安装过程
+
+**示例流程**:
+```
+用户安装插件 A
+  └─ 依赖检测: 需要插件 B 和 C
+     ├─ 插件 B 未安装
+     │  ├─ 从仓库查找插件 B ✓
+     │  ├─ 开始安装插件 B
+     │  └─ 依赖检测: 插件 B 需要插件 D
+     │     ├─ 从仓库查找插件 D ✓
+     │     ├─ 安装插件 D ✓
+     │     └─ 继续安装插件 B ✓
+     ├─ 插件 C 未安装
+     │  ├─ 从仓库查找插件 C ✓
+     │  └─ 安装插件 C ✓
+     └─ 所有依赖安装完成，安装插件 A ✓
+
+安装成功提示:
+  插件 A 及其 3 个依赖安装成功！
+  已安装依赖：
+    • 插件 B
+    • 插件 C  
+    • 插件 D
+```
+
+**循环依赖检测**:
+```csharp
+// 检测示例：A → B → C → A
+if (installationChain.Contains(pluginId))
+{
+    var chain = string.Join(" -> ", installationChain) + $" -> {pluginId}";
+    return InstallResult.CreateFailure($"检测到循环依赖: {chain}");
+}
+```
+
+**错误处理**:
+- 依赖不存在：显示"无法找到依赖插件: {id}，请确认该插件在插件仓库中存在"
+- 依赖安装失败：停止整个安装流程，显示失败的依赖名称
+- 循环依赖：显示完整的依赖链路径
+
+**用户体验**:
+- ✅ 一键安装：用户只需点击一次"安装"，所有依赖自动处理
+- ✅ 透明度高：安装过程中显示当前正在安装的依赖
+- ✅ 信息完整：成功后列出所有自动安装的依赖
+- ✅ 错误友好：依赖问题有明确的错误提示
+
+**插件安装状态检测机制**:
+
+`GetInstalledPluginsAsync` 方法采用**动态扫描机制**，根据插件清单（manifest.json）中每个插件的 `installation.mappings` 配置来判断插件是否已安装：
+
+```csharp
+// 1. 从 manifest 获取所有可用插件
+var availablePlugins = await GetAvailablePluginsAsync();
+
+// 2. 对每个插件，检查其 installation.mappings 中的 target 路径
+foreach (var pluginInfo in availablePlugins)
+{
+    // 检查每个 mapping 的 target 路径是否存在文件
+    foreach (var mapping in pluginInfo.Installation.Mappings)
+    {
+        var targetPath = Path.Combine(serverPath, mapping.Target);
+        if (Directory.Exists(targetPath) && HasFiles(targetPath))
+        {
+            // 路径存在且包含文件，说明已安装
+            installedPlugins.Add(new InstalledPlugin { ... });
+        }
+    }
+}
+```
+
+**优势**:
+- ✅ 不写死扫描路径，完全由 manifest 配置驱动
+- ✅ 支持插件安装在任意位置（`plugins/`, `shared/`, `configs/` 等）
+- ✅ 自动适配新增插件，无需修改代码
+- ✅ 支持复杂的插件结构（多个 mapping 路径）
+
+**示例**:
+
+不同插件的安装位置各不相同：
+- **AnyBaseLib**: `game/csgo/addons/counterstrikesharp/shared/AnyBaseLib/`
+- **MenuManager**: `plugins/MenuManagerCore/` + `shared/MenuManagerApi/`
+- **WeaponPaints**: `plugins/WeaponPaints/` + `gamedata/` + `configs/plugins/WeaponPaints/`
+
+所有这些都能自动被检测到，因为系统会读取每个插件的 `installation.mappings` 配置。
 
 ---
 
